--- a/style/menu.css
+++ b/style/menu.css
@@ -3,7 +3,7 @@
 menu {
     background-color: #37324b;
     height: 100vh;
-    width: 4vw;
+    width: 6vw;
     border-radius: 0px 15px 15px 0px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.233);
     transition-duration: .8s;
@@ -75,7 +75,7 @@ menu span.arrowOpen:hover {
 
 menu nav {
     width: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     flex-direction: column;
     opacity: 0;
@@ -133,3 +133,9 @@ menu nav button:hover {
     Desktops, large screens – 1025px — 1200px.
     Extra large screens, TV – 1201px, and more.
 */
+
+@media only screen and (min-width: 0px) and (max-width: 570px) {
+    menu {
+        display: none;
+    }
+}
