--- a/style/menu.css
+++ b/style/menu.css
@@ -79,6 +79,7 @@ menu nav {
     justify-content: center;
     flex-direction: column;
     opacity: 0;
+    gap: 15px;
     transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     margin-top: 5%;
 }
@@ -138,4 +139,10 @@ menu nav button:hover {
     menu {
         display: none;
     }
+}
+
+section#teste {
+    height: 100vh;
+    width: 100vw;
+    background-color: #383150;
 }
