--- a/style/about.css
+++ b/style/about.css
@@ -3,6 +3,9 @@
 section#about {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 section#about aside.pamunho {
