--- a/style/example.css
+++ b/style/example.css
@@ -5,6 +5,7 @@ section#example {
     height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 section#example aside.example {
